# data-pipeline

./: .gitignore  pyproject.toml
data/processed/: iris_processed.csv
output/logs/: log_20240503_152356.txt  log_20240503_152421.txt  log_20240503_152522.txt  log_20240503_152648.txt  log_20240503_153705.txt  log_20240503_153853.txt  log_20240503_153928.txt  log_20240503_154019.txt
output/md/: intro.md  table.md
src/data_pipeline/: settings.py
src/data_pipeline/data/: logger.py  processor.py  validator.py
src/data_pipeline/reporting/: pdf.py  writer.py
src/data_pipeline/visualization/: eda.py
tests/: test_version.py
